force-app/main/default/objects/Reclamacao__c.object
<CustomObject>
    <fields>
        <fullName>AtualizadoAposReuniao__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Atualizado após reunião</description>
        <label>Atualizado Pós Reuni?o</label>
        <type>Checkbox</type>
    </fields>
    <recordTypes>
        <fullName>CentroLogistico</fullName>
        <active>true</active>
        <description>Record Type Centro Logístico - Reclamacao__c</description>
        <label>Centro Logístico</label>
    </recordTypes>
    <recordTypes>
        <fullName>Geral</fullName>
        <active>true</active>
        <description>Record Type Geral - Reclamacao__c</description>
        <label>Geral</label>
    </recordTypes>
    <recordTypes>
        <fullName>Rebocadores</fullName>
        <active>true</active>
        <description>Record Type Rebocadores - Reclamacao__c</description>
        <label>Rebocadores</label>
    </recordTypes>
    <recordTypes>
        <fullName>TeconRioGrande</fullName>
        <active>true</active>
        <description>Record Type Tecon Rio Grande - Reclamacao__c</description>
        <label>Tecon Rio Grande</label>
    </recordTypes>
    <recordTypes>
        <fullName>TeconSalvador</fullName>
        <active>true</active>
        <description>Record Type Tecon Salvador - Reclamacao__c</description>
        <label>Tecon Salvador</label>
    </recordTypes>
</CustomObject>