force-app/main/default/objects/Reclamacao__c/fields/AcaoArea__c.field-meta.xml
<CustomField>
    <fullName>AcaoArea__c</fullName>
    <description>Ação da Área</description>
    <label>Ação da Área</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>