force-app/main/default/objects/Reclamacao__c/fields/AnaliseProcessos__c.field-meta.xml
<CustomField>
    <fullName>AnaliseProcessos__c</fullName>
    <description>Análise Processos</description>
    <label>Análise</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>