force-app/main/default/objects/Reclamacao__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <description>Qual a Área?</description>
    <label>Área</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tecon Salvador</fullName>
                <default>true</default>
                <label>Tecon Salvador</label>
            </value>
            <value>
                <fullName>Tecon Rio Grande</fullName>
            </value>
            <value>
                <fullName>Centro Logístico</fullName>
            </value>
            <value>
                <fullName>Rebocadores</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>