force-app/main/default/objects/Reclamacao__c/fields/AtualizadoPosReuniao__c.field-meta.xml
<CustomField>
    <fullName>AtualizadoPosReuniao__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Atualizado após reunião</description>
    <label>Atualizado Pós Reunião</label>
    <type>Checkbox</type>
</CustomField>