force-app/main/default/objects/Reclamacao__c/fields/CarimboDataHora__c.field-meta.xml
<CustomField>
    <fullName>CarimboDataHora__c</fullName>
    <description>Carimbo de data/hora</description>
    <label>Data/Hora</label>
    <type>DateTime</type>
</CustomField>