force-app/main/default/objects/Reclamacao__c/fields/Caso__c.field-meta.xml
<CustomField>
    <fullName>Caso__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relacionamento com o Caso</description>
    <label>Caso</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Reclamações</relationshipLabel>
    <relationshipName>Reclamacoes</relationshipName>
    <type>Lookup</type>
</CustomField>