force-app/main/default/objects/Reclamacao__c/fields/CategoriaMaster__c.field-meta.xml
<CustomField>
    <fullName>CategoriaMaster__c</fullName>
    <description>Categoria Master</description>
    <label>Categoria Master</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Operação</fullName>
                <default>true</default>
                <label>Operação</label>
            </value>
            <value>
                <fullName>Processo</fullName>
            </value>
            <value>
                <fullName>Atendimento</fullName>
            </value>
            <value>
                <fullName>Sistema</fullName>
            </value>
            <value>
                <fullName>Outro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>