force-app/main/default/objects/Reclamacao__c/fields/CategoriaReclamante__c.field-meta.xml
<CustomField>
    <fullName>CategoriaReclamante__c</fullName>
    <description>Categoria do Reclamante</description>
    <label>Categoria Reclamante</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cliente</fullName>
                <default>true</default>
                <label>Cliente</label>
            </value>
            <value>
                <fullName>Despachante</fullName>
            </value>
            <value>
                <fullName>Transportadora</fullName>
            </value>
            <value>
                <fullName>Terceiro</fullName>
            </value>
            <value>
                <fullName>Outro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>