force-app/main/default/objects/Reclamacao__c/fields/CategorizacaoDetalhada__c.field-meta.xml
<CustomField>
    <fullName>CategorizacaoDetalhada__c</fullName>
    <description>Categorização detalhada</description>
    <label>Categorização Detalhada</label>
    <length>255</length>
    <type>Text</type>
</CustomField>