force-app/main/default/objects/Reclamacao__c/fields/CategorizacaoImpactoCliente__c.field-meta.xml
<CustomField>
    <fullName>CategorizacaoImpactoCliente__c</fullName>
    <description>Categorização impacto ao cliente</description>
    <label>Impacto Cliente</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sem Impacto</fullName>
                <default>true</default>
                <label>Sem Impacto</label>
            </value>
            <value>
                <fullName>Baixo Impacto</fullName>
            </value>
            <value>
                <fullName>Médio Impacto</fullName>
            </value>
            <value>
                <fullName>Alto Impacto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>