force-app/main/default/objects/Reclamacao__c/fields/Causa__c.field-meta.xml
<CustomField>
    <fullName>Causa__c</fullName>
    <description>Causa</description>
    <label>Causa</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>