force-app/main/default/objects/Reclamacao__c/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Qual cliente?</description>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Reclamações do Cliente</relationshipLabel>
    <relationshipName>ReclamacoesCliente</relationshipName>
    <type>Lookup</type>
</CustomField>