force-app/main/default/objects/Reclamacao__c/fields/ComentarioArea__c.field-meta.xml
<CustomField>
    <fullName>ComentarioArea__c</fullName>
    <description>Comentário da Área</description>
    <label>Comentário Área</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>