force-app/main/default/objects/Reclamacao__c/fields/DataAberturaFluig__c.field-meta.xml
<CustomField>
    <fullName>DataAberturaFluig__c</fullName>
    <description>Data abertura do fluig</description>
    <label>Data Abertura Fluig</label>
    <type>Date</type>
</CustomField>