force-app/main/default/objects/Reclamacao__c/fields/DataAberturaSE__c.field-meta.xml
<CustomField>
    <fullName>DataAberturaSE__c</fullName>
    <description>Data da abertura SE</description>
    <label>Data Abertura SE</label>
    <type>Date</type>
</CustomField>