force-app/main/default/objects/Reclamacao__c/fields/DataAcao__c.field-meta.xml
<CustomField>
    <fullName>DataAcao__c</fullName>
    <description>Data da Ação</description>
    <label>Data da Ação</label>
    <type>Date</type>
</CustomField>