force-app/main/default/objects/Reclamacao__c/fields/DataAnalise__c.field-meta.xml
<CustomField>
    <fullName>DataAnalise__c</fullName>
    <description>Data de an?lise</description>
    <label>Data Análise</label>
    <type>Date</type>
</CustomField>