force-app/main/default/objects/Reclamacao__c/fields/DataFechamentoFluig__c.field-meta.xml
<CustomField>
    <fullName>DataFechamentoFluig__c</fullName>
    <description>Data fechamento do fluig</description>
    <label>Data Fechamento Fluig</label>
    <type>Date</type>
</CustomField>