force-app/main/default/objects/Reclamacao__c/fields/DataInicioTicket__c.field-meta.xml
<CustomField>
    <fullName>DataInicioTicket__c</fullName>
    <description>Data de início do ticket</description>
    <label>Data Início</label>
    <type>Date</type>
</CustomField>