force-app/main/default/objects/Reclamacao__c/fields/DataRetornoCliente__c.field-meta.xml
<CustomField>
    <fullName>DataRetornoCliente__c</fullName>
    <description>Data de retorno para o cliente</description>
    <label>Data Retorno</label>
    <type>Date</type>
</CustomField>