force-app/main/default/objects/Reclamacao__c/fields/DataValidacaoProcedencia__c.field-meta.xml
<CustomField>
    <fullName>DataValidacaoProcedencia__c</fullName>
    <description>Data validação Procedência</description>
    <label>Data Validação Procedência</label>
    <type>Date</type>
</CustomField>