force-app/main/default/objects/Reclamacao__c/fields/DiasAberto__c.field-meta.xml
<CustomField>
    <fullName>DiasAberto__c</fullName>
    <description>Dias aberto</description>
    <label>Dias Aberto</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>