force-app/main/default/objects/Reclamacao__c/fields/DocumentoQualidade__c.field-meta.xml
<CustomField>
    <fullName>DocumentoQualidade__c</fullName>
    <description>Documento Qualidade</description>
    <label>Documento Qualidade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>