force-app/main/default/objects/Reclamacao__c/fields/Evidencia__c.field-meta.xml
<CustomField>
    <fullName>Evidencia__c</fullName>
    <description>Evidência</description>
    <label>Evidência</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>