force-app/main/default/objects/Reclamacao__c/fields/FatoCausa__c.field-meta.xml
<CustomField>
    <fullName>FatoCausa__c</fullName>
    <description>Fato causa</description>
    <label>Fato/Causa</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>