force-app/main/default/objects/Reclamacao__c/fields/Fluig__c.field-meta.xml
<CustomField>
    <fullName>Fluig__c</fullName>
    <description>Fluig</description>
    <label>Fluig</label>
    <length>100</length>
    <type>Text</type>
</CustomField>