force-app/main/default/objects/Reclamacao__c/fields/ImpactoMaster__c.field-meta.xml
<CustomField>
    <fullName>ImpactoMaster__c</fullName>
    <description>Impacto Master</description>
    <label>Impacto Master</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Baixo</fullName>
                <default>true</default>
                <label>Baixo</label>
            </value>
            <value>
                <fullName>Médio</fullName>
            </value>
            <value>
                <fullName>Alto</fullName>
            </value>
            <value>
                <fullName>Crítico</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>