force-app/main/default/objects/Reclamacao__c/fields/MaisInformacoesReincidencia__c.field-meta.xml
<CustomField>
    <fullName>MaisInformacoesReincidencia__c</fullName>
    <description>Mais informações sobre reincidência</description>
    <label>Informações Reincidência</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>