force-app/main/default/objects/Reclamacao__c/fields/Modalidade__c.field-meta.xml
<CustomField>
    <fullName>Modalidade__c</fullName>
    <description>Modalidade</description>
    <label>Modalidade</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Importação</fullName>
                <default>true</default>
                <label>Importação</label>
            </value>
            <value>
                <fullName>Exportação</fullName>
            </value>
            <value>
                <fullName>Cabotagem</fullName>
            </value>
            <value>
                <fullName>Outro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>