force-app/main/default/objects/Reclamacao__c/fields/ObservacoesQualidade__c.field-meta.xml
<CustomField>
    <fullName>ObservacoesQualidade__c</fullName>
    <description>Observações Qualidade</description>
    <label>Observações Qualidade</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>