force-app/main/default/objects/Reclamacao__c/fields/Procedencia__c.field-meta.xml
<CustomField>
    <fullName>Procedencia__c</fullName>
    <description>Procedência</description>
    <label>Procedência</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cliente</fullName>
                <default>true</default>
                <label>Cliente</label>
            </value>
            <value>
                <fullName>Interna</fullName>
            </value>
            <value>
                <fullName>Órgão Regulador</fullName>
            </value>
            <value>
                <fullName>Outro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>