force-app/main/default/objects/Reclamacao__c/fields/QuemReclamou__c.field-meta.xml
<CustomField>
    <fullName>QuemReclamou__c</fullName>
    <description>Quem reclamou?</description>
    <label>Requisitante</label>
    <length>255</length>
    <type>Text</type>
</CustomField>