force-app/main/default/objects/Reclamacao__c/fields/RegistroSE__c.field-meta.xml
<CustomField>
    <fullName>RegistroSE__c</fullName>
    <description>Registro SE</description>
    <label>Registro SE</label>
    <length>100</length>
    <type>Text</type>
</CustomField>