force-app/main/default/objects/Reclamacao__c/fields/Reincidente__c.field-meta.xml
<CustomField>
    <fullName>Reincidente__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Reincidente?</description>
    <label>Reincidente?</label>
    <type>Checkbox</type>
</CustomField>