force-app/main/default/objects/Reclamacao__c/fields/SemanaAnalise__c.field-meta.xml
<CustomField>
    <fullName>SemanaAnalise__c</fullName>
    <description>Semana de an?lise</description>
    <label>Semana Análise</label>
    <length>20</length>
    <type>Text</type>
</CustomField>