force-app/main/default/objects/Reclamacao__c/fields/SemanaRecebimento__c.field-meta.xml
<CustomField>
    <fullName>SemanaRecebimento__c</fullName>
    <description>Semana da reclama??o</description>
    <label>Semana Recebimento</label>
    <length>20</length>
    <type>Text</type>
</CustomField>