force-app/main/default/objects/Reclamacao__c/fields/StatusFluig__c.field-meta.xml
<CustomField>
    <fullName>StatusFluig__c</fullName>
    <description>Status do Fluig</description>
    <label>Status Fluig</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aberto</fullName>
                <default>true</default>
                <label>Aberto</label>
            </value>
            <value>
                <fullName>Em Andamento</fullName>
            </value>
            <value>
                <fullName>Concluído</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>