force-app/main/default/objects/Reclamacao__c/fields/StatusRegistro__c.field-meta.xml
<CustomField>
    <fullName>StatusRegistro__c</fullName>
    <description>Status</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aberta</fullName>
                <default>true</default>
                <label>Aberta</label>
            </value>
            <value>
                <fullName>Em Análise</fullName>
            </value>
            <value>
                <fullName>Concluída</fullName>
            </value>
            <value>
                <fullName>Cancelada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>