force-app/main/default/objects/Reclamacao__c/fields/Subassunto__c.field-meta.xml
<CustomField>
    <fullName>Subassunto__c</fullName>
    <description>Copiado da árvore de categorização do Case na geração automática da Reclamação.</description>
    <label>Subassunto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>WS_Subassunto</valueSetName>
    </valueSet>
</CustomField>