force-app/main/default/objects/Reclamacao__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <description>Tipo</description>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Operacional</fullName>
                <default>true</default>
                <label>Operacional</label>
            </value>
            <value>
                <fullName>Processo</fullName>
            </value>
            <value>
                <fullName>Comunicação</fullName>
            </value>
            <value>
                <fullName>Outro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>