force-app/main/default/objects/Reclamacao__c/fields/Unidade__c.field-meta.xml
<CustomField>
    <fullName>Unidade__c</fullName>
    <description>Unidade</description>
    <label>Unidade</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tecon Salvador</fullName>
                <default>true</default>
                <label>Tecon Salvador</label>
            </value>
            <value>
                <fullName>Tecon Rio Grande</fullName>
            </value>
            <value>
                <fullName>Centro Logístico</fullName>
            </value>
            <value>
                <fullName>Rebocadores</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>