force-app/main/default/objects/Reclamacao__c/fields/VozCliente__c.field-meta.xml
<CustomField>
    <fullName>VozCliente__c</fullName>
    <description>Voz do Cliente</description>
    <label>Voz Cliente</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>